@@ -1,5 +1,7 @@
 Version 4.0.x:
 
+* Support for looking for ARM64 plugins.
+* Prefer $HOME/FS-UAE over Documents/FS-UAE.
 * Temporarily disable manymouse in device helper (fixes misleading security
   warning in macOS about listening to keyboard).
 * Fixed screenshot function (Mod+S).
